[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/Level/Interface/LevelCompletePopup.gd" type="Script" id=1]

[node name="LevelCompletePopup" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.333333, 0.333333, 0.333333, 0.333333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -40.0
margin_right = 110.0
margin_bottom = 40.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepLabel" type="Label" parent="Menu"]
margin_right = 220.0
margin_bottom = 27.0
text = "%s/%s"
align = 1

[node name="Buttons" type="HBoxContainer" parent="Menu"]
margin_top = 47.0
margin_right = 220.0
margin_bottom = 80.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="Menu/Buttons"]
margin_right = 72.0
margin_bottom = 33.0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="Menu/Buttons"]
margin_left = 92.0
margin_right = 220.0
margin_bottom = 33.0
text = "Next level"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu/Buttons/MenuButton" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Menu/Buttons/NextButton" to="." method="_on_next_pressed"]
